Modified scan list to use asMoveable instead of "instanceof"